--- a/README
+++ b/README
@@ -11,3 +11,8 @@ Example goes here.
 
 
 Copyright (c) 2008 [name of plugin creator], released under the MIT license
+
+## Support on Beerpay
+Hey dude! Help me out for a couple of :beers:!
+
+[![Beerpay](https://beerpay.io/chebyte/google-scraps/badge.svg?style=beer-square)](https://beerpay.io/chebyte/google-scraps)  [![Beerpay](https://beerpay.io/chebyte/google-scraps/make-wish.svg?style=flat-square)](https://beerpay.io/chebyte/google-scraps?focus=wish)
